apps/public/plex/plex-service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 32400
