apps/public/plex/plex.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: plex
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 32400
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  namespace: plex 
  # by convention, use the name of the Service
  # as a prefix for the name of the EndpointSlice
  name: plex-1
  labels:
    kubernetes.io/service-name: plex
addressType: IPv4
ports:
  - name: http 
    appProtocol: http
    protocol: TCP
    port: 32400
endpoints:
  - addresses:
      - "192.168.4.124"
