apps/public/plex/plex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: plex
  labels:
    external-dns-enabled: "true"
  annotations:
    external-dns.alpha.kubernetes.io/target: abbottland.io
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: plex.abbottland.io
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: plex.abbottland.io
    http:
      paths:
      - backend:
          service:
            name: plex
            port:
              number: 32400
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - plex.abbottland.io
    secretName: plex-tls
